--- a/css/style.css
+++ b/css/style.css
@@ -182,9 +182,10 @@ body {
 
 .load-bar {
   position: relative;
-  margin-top: 20px;
+  margin-top: 1px;
   width: 100%;
   height: 6px;
+  position: absolute;
   background-color: #fdba2c;
 }
 .bar {
